<resources>
    <string name="app_name">Chatify</string>
    <string name="login_button">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or_login_using">or Login Using...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="find_contact">Find Contact</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="username">UserName...</string>
    <string name="user_status">User Status...</string>
    <string name="currently_available">Currently Available</string>
    <string name="update">Update</string>
    <string name="new_group">New Group</string>
    <string name="message">Message...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_phone_number">My Phone Number...</string>
    <string name="phone_verify_btn">A phone verification is needed.\n  We will send an SMS message to verify your phone number.\n Please enter your current phone number.</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="submit_verification_code">Submit Verification Code</string>
    <string name="phone_verify_sms">In order continue the account setup process. Please Input the Verification code You just accepted Via SMS.</string>
    <string name="please_patient">The verification code should arrive shortly.  Please be patient</string>
    <string name="users_status">Users Status</string>
    <string name="user_name">User Name</string>
    <string name="send_message">Send Message</string>
    <string name="decline_request">Decline Request</string>
    <string name="send_chat_request">Send Chat Request</string>
    <string name="my_phone">My Phone</string>
    <string name="login_with_gmail">Login With Gmail</string>


</resources>
